Fixed a bug where you couldn't add items to shopping cart. The bug was due to settings z-index of the products div to -1

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -182,7 +182,7 @@ header {
     font-family: "Helvetica";
     position: relative;
     color:#0B3D91; 
-    z-index: -1;
+    z-index: 0;
 
 }
 a.div-click {
